istio-canary.yaml
# istio-canary.yml
apiVersion: v1
kind: Pod
metadata:
  name: lib-v1
  labels: { app: lib, version: v1 }
spec:
  containers:
  - name: lib
    image: proksch/istio-example-lib:0.0.1
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: lib-v2
  labels: { app: lib, version: v2 }
spec:
  containers:
  - name: lib
    image: proksch/istio-example-lib:0.0.2
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: app-v1
  labels: { app: app, version: v1 }
spec:
  containers:
  - name: app
    image: proksch/istio-example-app:0.0.1
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: app-v2
  labels: { app: app, version: v2 }
spec:
  containers:
  - name: app
    image: proksch/istio-example-app:0.0.2
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lib
spec:
  selector:
    app: lib
  ports:
  - name: http
    port: 1234
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - name: http
    port: 1234
    targetPort: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: lib-dr
  namespace: default
spec:
  host: lib
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-dr
  namespace: default
spec:
  host: app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app
        subset: v1
      weight: 90
    - destination:
        host: app
        subset: v2
      weight: 10
